# thread-pool-party-for-cpp-nerds

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: basic.yml
cmake/: InitGitSubmodule.cmake
include/pool_party/: thread_pool.hpp
include/pool_party/detail/: sync.hpp  thread_factory.hpp  thread_joiner.hpp  thread_pool.hpp
scripts/: check-clang-format.py
tests/: CMakeLists.txt  example_test.cpp  thread_pool_tests.cpp
tests/integration/: CMakeLists.txt  thread_pool_tests.cpp
tests/unit/: CMakeLists.txt  sync_tests.cpp  thread_factory_tests.cpp  thread_joiner_tests.cpp  thread_pool_tests.cpp
tests/unit/mocks/: CMakeLists.txt  joinable_mock.hpp
